Included changes in French html pages.

--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -162,6 +162,9 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                                     <strong class="required">(obligatoire)</strong>
                                 </label>
                                 <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required">
+                                <input name="gender" type="hidden" id="gender" />
+                                <input name="seriousReport" type="hidden" id="seriousReport" />
+                                <input name="ageRange" type="hidden" id="ageRange" />
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                             </div>
 
