--- a/cvpWebApi/canada-vigilance-detail-fr.html
+++ b/cvpWebApi/canada-vigilance-detail-fr.html
@@ -460,7 +460,6 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
             }
         });
 
-        //$(document).ready(function () {
         window["wb-tables"] = {
             "processing": true,
             "ajax": {
@@ -470,29 +469,47 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                 //},
                 "error": OnFail
             },
-            "order": [[1, "desc"]],
+            "order": [[0, "desc"]],
+            "paginate": false,
+            "filter": false,
             "columns": [
                             { "data": "drug_name", sDefaultContent: "" },
-                            { "data": "dosage_form", sDefaultContent: "" },
-                            { "data": "drug_involv_name", sDefaultContent: "" },
-                            { "data": "route_admin_name", sDefaultContent: "" },
+                            {
+                                "data": "dosage_form", sDefaultContent: "",
+                                "sortable": false
+                            },
+                            {
+                                "data": "drug_involv_name", sDefaultContent: "",
+                                "sortable": false
+                            },
+                            {
+                                "data": "route_admin_name", sDefaultContent: "",
+                                "sortable": false
+                            },
                             {
                                 "data": null,
                                 "render": function (data, type, full) {
                                     return data.unit_dose_qty + ' ' + data.dose_unit;
-                                }
+                                },
+                                "sortable": false
                             },
-                            { "data": "frequency_time", sDefaultContent: "" },
+                            {
+                                "data": "frequency_time", sDefaultContent: "",
+                                "sortable": false
+                            },
                             {
                                 "data": null,
                                 "render": function (data, type, full) {
                                     return data.therapy_duration + ' ' + data.therapy_duration_unit;
-                                }
+                                },
+                                "sortable": false
                             },
-                            { "data": "indication_name", sDefaultContent: "" }
+                            {
+                                "data": "indication_name", sDefaultContent: "",
+                                "sortable": false
+                            }
             ]
         };
-        //});
 
         $.getJSON(goCvpReactionsUrlByID(lang), function (data) {
             if ($.trim(data)) {
@@ -501,39 +518,10 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                 $.each(data, function (k, v) {
                     var rowText = "<tr><td>" + v.pt_name + "</td><td>" + (v.duration != 0 ? v.duration + " " + v.duration_unit : "") + "</td></tr>";
                     $(rowText).appendTo(tbody);
-                    //alert("count 1 " + v.pt_name);
                 });
             }
 
         });
-
-        //$(document).ready(function () {
-        //    $.ajax({
-        //        url: goCvpReactionsUrlByID(lang),
-        //        url: "./Controllers/dhprController.ashx?reportId=5",
-        //        dataType: "json",
-        //        method: 'post',
-        //        success: function (data) {
-        //            $("#reactionsTable").dataTable({
-        //                data: data,
-        //                columns: [
-        //                    { 'data': 'PtNameEng' },
-        //                    { 'data': 'Duration' }
-
-        //                ]
-        //                <th>Adverse Reaction Term(s)</th>
-        //                <th>Reaction Duration</th>
-
-        //            })
-        //            alert('success in calling ReportDrugUrlByID');
-        //        },
-        //        error: function () {
-        //            alert('error in callling ReportDrugUrlByID');
-        //        }
-        //    })
-        //});
- 
-
 
     </script>
 </body>
