Added validation rules to the search pages.

--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -161,7 +161,7 @@ var autoCompletionOptions = { 'validLanguages' : 'fr', };
                                     <span class="field-name">Produits de santé ou terme d'effet indésirable:</span>
                                     <strong class="required">(obligatoire)</strong>
                                 </label>
-                                <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required">
+                                <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Adverse Reaction Term]" class="full-width" required="required" data-rule-minlength="3" autofocus>
                                 <input name="gender" type="hidden" id="gender" />
                                 <input name="seriousReport" type="hidden" id="seriousReport" />
                                 <input name="ageRange" type="hidden" id="ageRange" />
