--- a/cvpWebApi/canada-vigilance.html
+++ b/cvpWebApi/canada-vigilance.html
@@ -161,7 +161,7 @@ var autoCompletionOptions = { 'validLanguages' : 'en', };
                                                 <span class="field-name">Brand/Drug Name or Active Ingredient:</span>
                                                 <strong class="required">(required)</strong>
                                             </label>
-                                            <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Active Ingredient]" class="full-width" required="required">
+                                            <input name="term" type="text" id="term" list="list-liste" placeholder="[Enter text here to search by Brand/Drug Name or Active Ingredient]" class="full-width" required="required" data-rule-minlength="3" autofocus>
                                             <input name="gender" type="hidden" id="gender"/>
                                             <input name="seriousReport" type="hidden" id="seriousReport"/>
                                             <input name="ageRange" type="hidden" id="ageRange" />
