--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -101,7 +101,7 @@
 
                 <div class="panel-body">
                     <div class="row bg-info">
-                        <div class="col-md-4 col-sm-4" id="age-filter-section">
+                        <div class="col-md-3 col-sm-3" id="age-filter-section">
                             <label for="ageRange">Age Range</label>
                             <select class="form-control" name="ageRange" id="ageRange">
                                 <option value="">All</option>
@@ -112,19 +112,15 @@
                                 <option value="80">80+</option>
                             </select>
                         </div>
-                        <div class="col-md-4 col-sm-4" id="gender-filter-section">
+                        <div class="col-md-3 col-sm-3" id="gender-filter-section">
                             <label for="gender">Gender</label>
                             <select class="form-control" name="gender" id="gender">
                                 <option value="">All</option>
                                 <option value="2">Female</option>
                                 <option value="1">Male</option>
                             </select>
-                            <!--<h3>Gender</h3>
-                            <a href="#">Both</a>
-                            <a href="#">Female</a>
-                            <a href="#">Male</a>-->
                         </div>
-                        <div class="col-md-4 col-sm-4" id="seriousReport-filter-section">
+                        <div class="col-md-3 col-sm-3" id="seriousReport-filter-section">
                             <label for="seriousReport">Serious Report?</label>
                             <select class="form-control" name="seriousReport" id="seriousReport">
                                 <option value="">Both</option>
@@ -132,45 +128,55 @@
                                 <option value="02">No</option>
                             </select>
                         </div>
-                        <div class="col-md-4" id="section3-filter-section">
-                            <!--<label for="searchCriteria">Health Product Search Criteria</label>
-                            <select class="form-control" name="searchCriteria" id="searchCriteria">
-                                <option value="">Both</option>
-                                <option value="activeIngredient">Active Ingredient Only</option>
-                                <option value="brandName">Brand Name Only</option>
-                            </select>-->
-                        </div>
-                    </div>
 
-                    <p id="subParam1">Matched list of the adverse reaction reports</p>
-                    <!--<div class="pull-right" id="btnDownload">
-                        <ul class="list-unstyled">
-                            <li class="btn-group btn-group-xs">
-                                <input type="button" name="btnExcel" value="Download csv" id="btnExcel" class="btn btn-default btn-xs mrgn-rght-md" />
-                                <input type="button" name="btnJson" value="Download json" id="btnJson" class="btn btn-default btn-xs mrgn-rght-md" />
-                                <input type="button" name="btnXml" value="Download xml" id="btnXml" class="btn btn-default btn-xs" />
-                              </li>
-                        </ul>
-                    </div>-->
-                    <table id="cvpTable" class="wb-tables table table-striped table-hover table-bordered">
-                        <thead>
-                            <tr class="active">
-                                <th>Adverse Reaction Report Number</th>
-                                <th>Market Authorization Holder AER Number</th>
-                                <th>Initial Received Date</th>
-                                <th>Age</th>
-                                <th>Gender</th>
-                                <th>Suspected Product Brand Name</th>
-                                <th>Adverse Reaction Terms</th>
-                        </thead>
-                        <tbody id="tbodyMain"></tbody>
-                    </table>
-                    <div class="panel-footer text-center">
-                        <div class="form-group mrgn-bttm-0">
-                            <a class="btn btn-default" href="canada-vigilance.html" role="button">New Search</a>
+                        <!--<div class="wb-frmvld">
+                            <form action="#" method="get" id="validation-example">-->
+
+                                
+                            <div class="col-sm-3 col-sm-3 form-group" id="date-filter-section">
+                                <label for="startDate" control-label"><span class="field-name">Start date</span><span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span>:</label>
+                                <input class="form-control" type="date" id="startDate" name="startDate" min="1965-01-01" data-rule-dateiso="true" />
+
+                                <label for="endDate" control-label"><span class="field-name">End date</span><span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span>:</label>
+                                <input class="form-control" type="date" id="endDate" name="endDate" data-rule-dateISO="true" />
+                            </div>
+
+
+                            <!--</form>
+                        </div>-->
+
+
+                        </div>
+
+                        <p id="subParam1">Matched list of the adverse reaction reports</p>
+                        <!--<div class="pull-right" id="btnDownload">
+            <ul class="list-unstyled">
+                <li class="btn-group btn-group-xs">
+                    <input type="button" name="btnExcel" value="Download csv" id="btnExcel" class="btn btn-default btn-xs mrgn-rght-md" />
+                    <input type="button" name="btnJson" value="Download json" id="btnJson" class="btn btn-default btn-xs mrgn-rght-md" />
+                    <input type="button" name="btnXml" value="Download xml" id="btnXml" class="btn btn-default btn-xs" />
+                  </li>
+            </ul>
+        </div>-->
+                        <table id="cvpTable" class="wb-tables table table-striped table-hover table-bordered">
+                            <thead>
+                                <tr class="active">
+                                    <th>Adverse Reaction Report Number</th>
+                                    <th>Market Authorization Holder AER Number</th>
+                                    <th>Initial Received Date</th>
+                                    <th>Age</th>
+                                    <th>Gender</th>
+                                    <th>Suspected Product Brand Name</th>
+                                    <th>Adverse Reaction Terms</th>
+                            </thead>
+                            <tbody id="tbodyMain"></tbody>
+                        </table>
+                        <div class="panel-footer text-center">
+                            <div class="form-group mrgn-bttm-0">
+                                <a class="btn btn-default" href="canada-vigilance.html" role="button">New Search</a>
+                            </div>
                         </div>
                     </div>
-                </div>
             </section>
             <!-- prefooter-en.html-Start-->
             <div id="def-preFooter">
@@ -226,6 +232,9 @@
         $("#gender").val(getParameterByName("gender"));
         $("#seriousReport").val(getParameterByName("seriousReport"));
         $("#ageRange").val(getParameterByName("ageRange"));
+        $("#startDate").val(getParameterByName("startDate"));
+        $("#endDate").val(getParameterByName("endDate"));
+
 
 
         $('#ageRange').change(function () {
@@ -255,13 +264,23 @@
             window.location.href = sendUrl;
         });
 
+        $('#startDate').change(function () {
+            var currentUrl = window.location.href;
+            var currentVal = $.trim(getParameterByName("startDate"));
+            var sendUrl = currentUrl.replace("&startDate=" + currentVal, "&startDate=" + $('#startDate').val());
+            alert("START date send url : " + sendUrl);
+            window.location.href = sendUrl;
+        });
+
+        $('#endDate').change(function () {
+            var currentUrl = window.location.href;
+            var currentVal = $.trim(getParameterByName("endDate"));
+            var sendUrl = currentUrl.replace("&endDate=" + currentVal, "&endDate=" + $('#endDate').val());
+            alert("END date send url : " + sendUrl);
+            window.location.href = sendUrl;
+        });
 
 
-        //$('#gender-filter-section a').click(function (e) {
-        //    e.preventDefault();
-        //    alert('some link was clicked');
-        //    return false;
-        //});
 
             window["wb-tables"] = {
                 "processing": true,
