--- a/cvpWebApi/canada-vigilance-fr.html
+++ b/cvpWebApi/canada-vigilance-fr.html
@@ -110,6 +110,8 @@
                                 <input name="gender" type="hidden" id="gender" />
                                 <input name="seriousReport" type="hidden" id="seriousReport" />
                                 <input name="ageRange" type="hidden" id="ageRange" />
+                                <input name="startDate" type="hidden" id="startDate" />
+                                <input name="endDate" type="hidden" id="endDate" />
                                 <datalist id="list-liste" data-ajax-replace=".././list-liste-eng.txt" class="wb-data-ajax-replace-inited"> </datalist>
                             </div>
 
