--- a/cvpWebApi/genericError.html
+++ b/cvpWebApi/genericError.html
@@ -42,7 +42,7 @@
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <script>dataLayer1 = [];</script>
     <!-- End Google Tag Manager -->
-    <script src="./js/mdall.js"></script>
+    <script src="./js/cvp.js"></script>
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage">
