--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -132,9 +132,9 @@
                                 </select>
                             </div>
                             <!--<div class="wb-frmvld">
-                <form action="#" method="get" id="validation-example">-->
+                            <form action="#" method="get" id="validation-example">-->
                             <div class="col-sm-3 col-sm-3 form-group" id="date-filter-section">
-                                <span class="field-name">Initial Received Date</span>
+                                <span class="field-name">Initial Received Date</span><br/>
                                 <label for="startDate" control-label"><span class="field-name">From</span><span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span>:</label>
                                 <input class="form-control" type="date" id="startDate" name="startDate" min="1965-01-01" data-rule-dateiso="true" />
 
@@ -142,7 +142,7 @@
                                 <input class="form-control" type="date" id="endDate" name="endDate" min="1965-01-01" data-rule-dateISO="true" />
                             </div>
                             <!--</form>
-            </div>-->
+                            </div>-->
                         </div>
                     </details>
 
