--- a/cvpWebApi/canada-vigilance-resultat.html
+++ b/cvpWebApi/canada-vigilance-resultat.html
@@ -131,7 +131,7 @@
                                 </select>
                             </div>
                             <div class="col-sm-3 col-sm-3 form-group" id="date-filter-section">
-                                <span class="field-name">Date de réception initiale</span>
+                                <span class="field-name">Date de réception initiale</span><br/>
                                 <label for="startDate" control-label"><span class="field-name">De</span><span class="datepicker-format"> (<abbr title="Les quatres chiffres de l'année, tiret, les deux chiffres du mois, tiret, les deux chiffres du jour">aaaa-mm-jj</abbr>)</span> :</label>
                                 <input class="form-control" type="date" id="startDate" name="startDate" min="1965-01-01" data-rule-dateiso="true" />
 
