Added two new Gender values.

--- a/cvpWebApi/canada-vigilance-resultat.html
+++ b/cvpWebApi/canada-vigilance-resultat.html
@@ -120,6 +120,8 @@
                                     <option value="">Tous les</option>
                                     <option value="2">Femme</option>
                                     <option value="1">Homme</option>
+                                    <option value="4">Non spécifié</option>
+                                    <option value="3">Inconnu</option>
                                 </select>
                             </div>
                             <div class="col-md-3" id="seriousReport-filter-section">
