--- a/cvpWebApi/canada-vigilance-result.html
+++ b/cvpWebApi/canada-vigilance-result.html
@@ -121,6 +121,8 @@
                                     <option value="">All</option>
                                     <option value="2">Female</option>
                                     <option value="1">Male</option>
+                                    <option value="4">Not Specified</option>
+                                    <option value="3">Unknown</option>
                                 </select>
                             </div>
                             <div class="col-md-3 col-sm-3" id="seriousReport-filter-section">
